Linux-Helper/iptables_example_3.txt
# apt-get install netfilter-persistence 
# iptables-restore < /somefolder/thisfile
# /etc/init.d/netfilter-persistent status
# systemctl enable netfilter-persistent
*filter
:INPUT DROP [21:2952]
:FORWARD DROP [0:0]
:OUTPUT DROP [12:826]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p icmp -j ACCEPT
-A INPUT -s 172.17.64.1/32 -i eth0 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --sport 22 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -d 172.17.64.1/32 -o eth0 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -o eth0 -p icmp -j ACCEPT
-A OUTPUT -j LOG
-A OUTPUT -o eth0 -j ACCEPT
COMMIT
